--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,45 @@
-# Server Configuration
+# =================================
+# SERVER CONFIGURATION
+# =================================
 NODE_ENV=development
 PORT=3000
 HOST=0.0.0.0
 
-# Database Configuration
+# =================================
+# DATABASE CONFIGURATION (LOCAL)
+# =================================
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=db_name_example
+DB_NAME=patrimonio_db
 DB_USER=postgres
 DB_PASSWORD=your_password_here
 
-# JWT Configuration
+# =================================
+# DATABASE CONFIGURATION (SUPABASE - PRODUCTION)
+# =================================
+# Get your connection details from: https://supabase.com/dashboard/project/_/settings/database
+# Example Supabase connection string format:
+# DB_HOST=db.abcdefghijklmnop.supabase.co
+# DB_PORT=5432
+# DB_NAME=postgres
+# DB_USER=postgres
+# DB_PASSWORD=your-supabase-password-from-dashboard
+
+# =================================
+# JWT CONFIGURATION
+# =================================
+# SECURITY: Generate a strong random secret for production!
+# Use: openssl rand -base64 32
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 JWT_EXPIRES_IN=7d
 
-# CORS Configuration
+# =================================
+# CORS CONFIGURATION
+# =================================
+# Local development
 FRONTEND_URL=http://localhost:5173
+
+# Production examples:
+# FRONTEND_URL=https://your-frontend.vercel.app
+# FRONTEND_URL=https://your-frontend.netlify.app
+# For multiple origins, modify src/server.ts CORS config
