--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     region: oregon # Free tier region
     plan: free
     buildCommand: yarn install && yarn build
-    startCommand: node dist/server.js
+    startCommand: yarn start
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
