--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "dependencies": {
     "@fastify/cors": "^8.4.0",
     "@fastify/jwt": "^7.2.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.9.0",
     "@types/validator": "^13.15.10",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.0",
@@ -39,14 +41,12 @@
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.35.0",
     "sequelize-typescript": "^2.1.5",
+    "typescript": "^5.2.2",
     "uuid": "^13.0.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20.9.0",
     "sequelize-cli": "^6.6.2",
-    "tsx": "^4.6.0",
-    "typescript": "^5.2.2"
+    "tsx": "^4.6.0"
   }
 }
