[UPD] - change some db config

--- a/.env.example
+++ b/.env.example
@@ -13,17 +13,32 @@ DB_PORT=5432
 DB_NAME=patrimonio_db
 DB_USER=postgres
 DB_PASSWORD=your_password_here
+DB_SSL=false
 
 # =================================
 # DATABASE CONFIGURATION (SUPABASE - PRODUCTION)
 # =================================
 # Get your connection details from: https://supabase.com/dashboard/project/_/settings/database
-# Example Supabase connection string format:
+#
+# IMPORTANT FOR RENDER/VERCEL/NETLIFY DEPLOYMENTS:
+# Use Connection Pooler (IPv4) instead of direct connection to avoid IPv6 issues
+# Path: Supabase Dashboard → Settings → Database → Connection Pooling → Transaction mode
+#
+# Connection Pooler (RECOMMENDED for PaaS platforms):
+# DB_HOST=aws-0-us-west-1.pooler.supabase.com
+# DB_PORT=5432
+# DB_NAME=postgres
+# DB_USER=postgres.abcdefghijklmnop
+# DB_PASSWORD=your-supabase-password
+# DB_SSL=true
+#
+# Direct Connection (for local development or VPS):
 # DB_HOST=db.abcdefghijklmnop.supabase.co
 # DB_PORT=5432
 # DB_NAME=postgres
 # DB_USER=postgres
-# DB_PASSWORD=your-supabase-password-from-dashboard
+# DB_PASSWORD=your-supabase-password
+# DB_SSL=true
 
 # =================================
 # JWT CONFIGURATION
