--- a/render.yaml
+++ b/render.yaml
@@ -25,7 +25,7 @@ services:
       - key: DB_HOST
         sync: false # Set manually: Prefer connection pooler host for IPv4 compatibility
       - key: DB_PORT
-        value: 5432
+        sync: false # Set manually from Supabase
       - key: DB_NAME
         sync: false # Set manually (usually 'postgres' for Supabase)
       - key: DB_USER
@@ -33,7 +33,7 @@ services:
       - key: DB_PASSWORD
         sync: false # Set manually from Supabase (secret)
       - key: DB_SSL
-        value: true # Required for Supabase connections
+        sync: false # Set manually from Supabase
 
       # JWT Configuration
       - key: JWT_SECRET
