--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "pino-pretty": "^13.1.3",
     "sequelize-cli": "^6.6.2",
     "tsx": "^4.6.0"
   }
